fixed for phone

--- a/architecture.html
+++ b/architecture.html
@@ -29,7 +29,24 @@ ul{padding-left:1.1rem}
 .note{background:#fff;border:1px solid var(--border);padding:.75rem .85rem;border-radius:8px;font-size:.85rem;color:var(--muted)}
 .back{font-size:.85rem;margin-top:.5rem;display:inline-block;color:var(--muted)}
 footer{border-top:1px solid var(--border);padding:1rem 0;text-align:center;color:var(--muted);font-size:.8rem}
-@media (max-width:720px){main h1{font-size:1.55rem}}
+@media (max-width:720px){
+  .wrap{padding:0 1rem 2rem}
+  header{padding:1.25rem 0 .85rem}
+  header a{gap:.5rem;font-size:.92rem}
+  header img{height:42px}
+  main h1{font-size:1.4rem;line-height:1.3}
+  h2{font-size:1rem;margin:1.75rem 0 .65rem}
+  .lead{font-size:.9rem}
+  p{font-size:.92rem}
+  .diagram-container{padding:.75rem;margin-top:.75rem}
+  .grid{grid-template-columns:1fr;gap:.85rem}
+  .card{padding:.85rem}
+  .card h3{font-size:.9rem}
+  .note{padding:.65rem .75rem;font-size:.82rem}
+  .meta{font-size:.72rem;margin-top:1.5rem}
+  ol{padding-left:1.25rem;font-size:.92rem}
+  ul{font-size:.9rem}
+}
 </style>
 </head>
 <body>
