--- a/index.html
+++ b/index.html
@@ -72,9 +72,24 @@
         footer{border-top:1px solid var(--border);padding:1rem 0;text-align:center;color:var(--muted);font-size:.88rem}
 
         @media (max-width:720px){
-            .brand{gap:.6rem}
-            .logo-main{height:144px}
-            .lead{font-size:.98rem}
+            .wrap{padding:0 1rem}
+            header{padding:1.5rem 0}
+            .brand{gap:.6rem;flex-direction:column;align-items:flex-start}
+            .logo-main{height:80px}
+            .lead{font-size:.9rem;margin-top:.35rem}
+            main{padding:1.75rem 0}
+            .hero{flex-direction:column;gap:1.5rem;padding:1rem 0}
+            .hero-right{flex:0 0 auto;width:100%;max-width:280px}
+            .hero h1{font-size:1.5rem;line-height:1.25}
+            .hero p{font-size:.92rem}
+            .grid{grid-template-columns:1fr;gap:1rem}
+            .card{padding:1rem}
+            .card h3{font-size:.98rem}
+            .card p{font-size:.9rem}
+            h2{font-size:1rem}
+            hr.sep{margin:1.75rem 0}
+            .contact{padding:1.25rem 0}
+            .btn{padding:.6rem .9rem;font-size:.92rem}
         }
     </style>
 </head>
