--- a/index.html
+++ b/index.html
@@ -165,6 +165,11 @@
         <header>
             <h1>Konf Platform: Declarative Multi-Agent Orchestration for Scalable Stochastic Systems</h1>
             <p class="subtitle">Research project investigating composable architectures for coordinating autonomous agents across distributed, non-deterministic workflows</p>
+            <p class="subtitle" style="margin-top: 1rem;">
+                <strong>Sourav Sharan</strong> · 
+                <a href="mailto:sourav.sharan.1411@student.uu.se" style="color: var(--accent);">sourav.sharan.1411@student.uu.se</a> · 
+                <a href="https://souravsharan.com/" target="_blank" rel="noopener" style="color: var(--accent);">souravsharan.com</a>
+            </p>
         </header>
 
         <main>
@@ -503,6 +508,30 @@ nodes:
 
             <h2>5. Implementation Status</h2>
 
+            <h3>5.1 Production Projects</h3>
+            <p>
+                Two production applications demonstrate the platform's capabilities:
+            </p>
+
+            <div class="component-grid">
+                <div class="component-card">
+                    <h3>Aspire AI</h3>
+                    <p>A life assistant chatbot helping users with goal setting, task management, and personal development. Built with Sutra orchestration and Smrti memory system for context-aware conversations.</p>
+                    <p style="margin-top: 0.75rem;">
+                        <a href="https://aspire-ai-47896.web.app/" target="_blank" rel="noopener" style="color: var(--accent); text-decoration: underline;">aspire-ai-47896.web.app</a>
+                    </p>
+                </div>
+                <div class="component-card">
+                    <h3>Apartmint</h3>
+                    <p>An intelligent real estate chatbot that helps users find housing listings through natural conversation. Demonstrates multi-step reasoning and tool integration for property search and filtering.</p>
+                    <p style="margin-top: 0.75rem;">
+                        <a href="https://apartmint.bertslab.com/" target="_blank" rel="noopener" style="color: var(--accent); text-decoration: underline;">apartmint.bertslab.com</a>
+                    </p>
+                </div>
+            </div>
+
+            <h3>5.2 Component Status</h3>
+
             <div class="diagram">
 <pre>
 Component Status (October 2025):
@@ -624,7 +653,11 @@ konf-platform/
 
         <footer>
             <p>Konf Platform Research Project · October 2025</p>
-            <p>Contact: <a href="mailto:contact@konf.dev" style="color: var(--accent);">contact@konf.dev</a></p>
+            <p><strong>Sourav Sharan</strong></p>
+            <p>
+                <a href="mailto:sourav.sharan.1411@student.uu.se" style="color: var(--accent);">sourav.sharan.1411@student.uu.se</a> · 
+                <a href="https://souravsharan.com/" target="_blank" rel="noopener" style="color: var(--accent);">souravsharan.com</a>
+            </p>
         </footer>
     </div>
 </body>
